feat: add security features
